# billiards

./: .gitignore  CMakeLists.txt  main.cpp
include/Utils/: Scale.hpp
include/core/: InputController.hpp  ScoreBoard.hpp
include/glad/: glad.h
include/physics/: Ball.hpp  Pockets.hpp  Table.hpp  World.hpp
include/render/: GLRenderer.hpp  Renderer.hpp
shaders/: phong.frag  phong.vert
src/: main.cpp
src/core/: InputController.cpp
src/physics/: Ball.cpp  Table.cpp  World.cpp
src/render/: GLRenderer.cpp  Renderer.cpp
